<resources>
    <string name="app_name">QKMeshDemo</string>

    <string name="add">add</string>
    <string name="export">export</string>
    <string name="emport">import</string>
    <string name="update">update</string>
    <string name="get_state">Get State</string>
    <string name="ttl">TTL</string>
    <string name="on_off">ON / OFF</string>
    <string name="ping">Ping</string>
    <string name="reset">Reset</string>
    <string name="address">Address</string>
    <string name="proxy">Proxy address</string>
    <string name="groups">groups</string>

    <string name="connecting">connecting</string>
    <string name="connect_failed">connect failed</string>
    <string name="connect_success">connect success</string>
</resources>
